--- a/Test/WebContent/partial-home.html
+++ b/Test/WebContent/partial-home.html
@@ -1,11 +1,11 @@
 
-<form name="myForm">
+<form name="myForm" class="col-md-4" id="loginForm">
     <h3>LOGIN</h3>
     <div class="form-group">
     <label>Username</label>
     <input type="text" class="form-control" ng-model="username" required>
     </div>
-     <div class="form-group">     
+    <div class="form-group">     
     <label>Password</label>
 	<input type="text" class="form-control" ng-model="password" required>
     </div>
