[master]Partial Pagin login Control

--- a/Test/WebContent/index.html
+++ b/Test/WebContent/index.html
@@ -15,7 +15,7 @@
 <script
 	src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script>
 <script src="js/app.js"></script>
-<script src="js/sampleController.js"></script>
+<script src="js/loginControl.js"></script>
 <script src="js/samplecontroller1.js"></script>
 
 
