--- a/Test/WebContent/partial-home.html
+++ b/Test/WebContent/partial-home.html
@@ -9,6 +9,6 @@
     <label>Password</label>
 	<input type="text" class="form-control" ng-model="password" required>
     </div>
-    
+    <button class="btn btn-primary" ng-click="reset()">Reset</button>
     <button type="submit" class="btn btn-primary" ng-click="fetchUser()">Submit</button>
  </form>
