[master]Signup template

--- a/Test/WebContent/index.html
+++ b/Test/WebContent/index.html
@@ -31,10 +31,10 @@
 			<a class="navbar-brand" ui-sref="#">Seattle Grace Hospital</a>
 		</div>
 		<ul ng-hide="logedin" class="nav navbar-nav navbar-right">
-			<li><a ui-sref="home"><span class="glyphicon glyphicon-user"></span>
+			<li><a ui-sref="signup"><span class="glyphicon glyphicon-user"></span>
 					Sign Up</a></li>
 
-			<li><a ui-sref="about"><span
+			<li><a ui-sref="home"><span
 					class="glyphicon glyphicon-log-in"></span> Login</a></li>
 
 		</ul>
